checkbox default checked

--- a/NumberLine/index.html
+++ b/NumberLine/index.html
@@ -69,12 +69,12 @@
       </div>
     <div class="flexContainer">
       <div class="flexItem">        
-        <input type="checkbox" id="pendulum">
+        <input type="checkbox" id="pendulum" checked>
         <label id="pendulum-chalkA" for="pendulum">Addition</label> 
       </div>
 
       <div class="flexItem">        
-        <input type="checkbox" id="pendulum2">
+        <input type="checkbox" id="pendulum2" checked>
         <label id="pendulum-chalkB" for="pendulum2">Subtraction</label> 
       </div>
       
